refactor: Api response null safe